Maybe Fix scrolling problem on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 /* Text Area */
 
 .chat-container {
-  max-height: 70vh;
+  max-height: 65vh;
   width: 60%;
   margin: 1rem auto;
   overflow-y: auto;
